# lazebot

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: ops.txt
filecache/: readme.txt
lazebot/: ai.py  api_cache.py  api_cache_file.py  exceptions.py  game_data.py  guild_op.py  guild_op_needs.py  guild_op_score.py  guild_score.py  item_value.py  main.py  op_req.py  report_generator.py  swgohgg.py
scripts/: build-dev.sh  build-prod.sh  deploy.sh
src/lazebot/: game_data.py  guild_score.py  main.py
tests/: conftest.py  test_game_data.py  test_guild_op_needs.py  test_guild_op_score.py  test_guild_score.py  test_item_value.py  test_op_req.py  test_report_generator.py
tests/testfilecache/: 113348231.json  124386395.json  129481921.json  138488913.json  138862254.json  142711953.json  152668344.json  157957918.json  173472829.json  227854852.json  242848755.json  244352453.json  269812363.json  315636959.json  317353364.json  367558926.json  373616324.json  385214597.json  387674373.json  394849534.json  428938971.json  441392819.json  446346384.json  462362841.json  463984383.json  468277145.json  469438919.json  498636777.json  513252419.json  524218147.json  545547414.json  559873813.json  673983664.json  699418728.json  734139688.json  736645715.json  738733632.json  749836178.json  771747668.json  779751657.json  (+11 more)
