[tool.poetry]
name = "lazebot"
version = "0.1.0"
description = "A simple discord bot"
authors = ["laze-b <lazebastra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.4"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
