[tool.poetry]
name = "lazebot"
version = "0.1.0"
description = "A simple discord bot"
authors = ["laze-b <lazebastra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.4"
discord-py = "^2.3.2"
importlib = "^1.0.4"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
