[tool.poetry]
name = "lazebot"
version = "0.1.0"
description = "A simple discord bot"
authors = ["laze-b <lazebastra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.0"
discord-py = "^2.3.2"
#importlib = "^1.0.4"
python-dotenv = "^1.0.1"
setuptools = "^69.0.3"
pyarrow = "^15.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
